--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-/* line 15, ../../Google Drive/File VS Code/LTW/ProgettiLTW/scss/style.sass */
-div.searchDiv {
+.searchDiv {
   background-image: url("../img/foto2.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -10,108 +9,103 @@ div.searchDiv {
   border-radius: 5px;
 }
 
-/* line 23, ../../Google Drive/File VS Code/LTW/ProgettiLTW/scss/style.sass */
-div.newsletterDiv {
+.newsletterDiv {
   background-color: inherit;
   min-width: 400px;
   border-radius: 5px;
   padding: 12px;
 }
 
-/* line 29, ../../Google Drive/File VS Code/LTW/ProgettiLTW/scss/style.sass */
 .btnToSpread {
   width: 100%;
 }
 
-/* line 32, ../../Google Drive/File VS Code/LTW/ProgettiLTW/scss/style.sass */
 .rowCards {
   height: 14em;
 }
 
-/* line 35, ../../Google Drive/File VS Code/LTW/ProgettiLTW/scss/style.sass */
 .colSleep {
   background-color: inherit;
 }
 
-/* line 39, ../../Google Drive/File VS Code/LTW/ProgettiLTW/scss/style.sass */
 .normalCard {
   background-color: white;
   border-color: rgba(12, 12, 12, 0.494);
 }
-.normalCard span{
+
+.normalCard span {
   color: #292b2c;
   margin: auto;
   border-bottom: 3px #292b2c solid;
-  
 }
 
 .activeCard {
   background-color: inherit;
   border-color: white;
 }
-.activeCard span{
+
+.activeCard span {
   color: darkgoldenrod;
   margin: auto;
   border-bottom: 5px darkgoldenrod solid;
 }
 
-.dinamicDiv{
+.dinamicDiv {
   background-color: inherit;
 }
 
-.toBeArrotondato{
+.toBeArrotondato {
   border-radius: 10px;
 }
 
-.buttone{
+.buttone {
   width: 100%;
   height: 100%;
 }
+
 /* XXL */
-@media screen and (max-width: 1400px){
-  .fluidImg{
+@media screen and (max-width: 1400px) {
+  .fluidImg {
     width: 100%;
     height: 60%;
-
   }
 }
+
 /* SM */
-@media screen and (max-width: 768px){
-  .fluidImg{
+@media screen and (max-width: 768px) {
+  .fluidImg {
     width: 100%;
     height: 70%;
-
   }
 }
 
-.fluidImgOrdina{
+.fluidImgOrdina {
   width: 100%;
   height: auto;
 }
 
 @media screen and (max-width: 768px) {
-  .iconUser{
+  .iconUser {
     width: 100%;
     height: auto;
-
     display: inline-block;
     vertical-align: middle;
   }
 }
 
-.lightMainDiv{
+.lightMainDiv {
   background-color: rgba(255, 255, 255, 0.686);
 }
 
-#mainDiv input:focus, #signInModal input:focus{
-  border-color: rgba(25, 135, 84, 1);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 10px rgba(25, 135, 84, 1);;
+#mainDiv input:focus, #signInModal input:focus {
+  border-color: #198754;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 10px #198754;
   outline: 0 none;
 }
 
-#signUpModal input:focus{
-  border-color: rgba(13, 110, 253, 1);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 10px rgba(13, 110, 253, 1);;
+#signUpModal input:focus {
+  border-color: #0d6efd;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 10px #0d6efd;
   outline: 0 none;
 }
 
@@ -140,28 +134,33 @@ div.newsletterDiv {
   background-color: inherit;
 }
 
-#rowCard .priceTable th, #rowCard .priceTable td{
+#rowCard .priceTable th, #rowCard .priceTable td {
   padding: 0;
   border: none;
 }
-#rowCard .priceTable tr{
+
+#rowCard .priceTable tr {
   border: none;
 }
 
-#rowCard img{
+#rowCard img {
   display: inline-block;
   height: 100%;
   vertical-align: middle;
   object-fit: scale-down;
   object-position: center;
-  margin:0 auto;
+  margin: 0 auto;
 }
 
-#carInfo{
+#carInfo {
   font-size: 15px;
 }
 
-#carInfo p{
-  margin-top:10px;
-  margin-bottom:10px;
+#carInfo p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#carCardTitleSpan {
+  white-space: nowrap;
 }
