--- a/scss/style.sass
+++ b/scss/style.sass
@@ -1,3 +1,13 @@
+// @import "../bootstrap/scss/_functions.scss";
+// @import "../bootstrap/scss/_variables.scss";
+// @import "../bootstrap/scss/bootstrap.scss";
+@import url('https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mate+SC&family=Odibee+Sans&display=swap');
+
+body
+    font-family: 'Mate SC', serif
+    background-color: #1b262c
+    
 .searchDiv
   background-image: url("../img/foto2.png")
   background-repeat: no-repeat
@@ -96,6 +106,8 @@
 
   .left
     background-color: white
+    border: 3px solid
+    border-color: none
     width: 150px
     height: 150px
     margin-top: -100px
@@ -103,6 +115,10 @@
     z-index: 100
 
   .right
+    background-color: #E84545
+    border: 5px solid
+    border-color: #f6e9e9
+    font-family: 'Mate SC', serif
     width: 18em
     height: 100%
     z-index: 99
@@ -135,3 +151,13 @@
 
 #carCardTitleSpan
   white-space: nowrap
+
+[id^='carInfo']
+    white-space: nowrap
+
+[id^='btnCard']
+    width: 100%
+    position: absolute
+    right:    0
+    bottom:   0
+    
