Removed ConfermaOrdineModal, added spinner btnPaga

--- a/scss/style.sass
+++ b/scss/style.sass
@@ -156,8 +156,13 @@ body
     white-space: nowrap
 
 [id^='btnCard']
-    width: 100%
-    position: absolute
-    right:    0
-    bottom:   0
+  width: 95%
+  position: absolute
+  right:    0
+  bottom:   0
+
+#cardMsgErrorLogin
+  width: 100%
+  position: absolute
+
     
