--- a/scss/style.sass
+++ b/scss/style.sass
@@ -104,6 +104,23 @@ body
     align-items: center
     justify-content: center
 
+    &:hover
+
+      .left
+        width: 50%
+        height: 100%
+        z-index: 100
+        margin-top: 0px
+        margin-right: 0px
+
+        transition: all 1s ease-in-out
+
+      .right
+        width: 50%
+        height: max-content
+        transition: all 1s ease-in-out
+
+
   .left
     background-color: white
     border: 3px solid
@@ -112,16 +129,19 @@ body
     height: 150px
     margin-top: -100px
     margin-right: -120px
-    z-index: 100
+    z-index: 200
+
+    transition: all 1s ease-in-out
+
 
   .right
-    background-color: #E84545
-    border: 5px solid
-    border-color: #f6e9e9
-    font-family: 'Mate SC', serif
+    border: 3px solid
     width: 18em
     height: 100%
-    z-index: 99
+    z-index: 100
+
+    transition: all 1s ease-in-out
+
 
   .inhBg
     background-color: inherit
