--- a/css/style.css
+++ b/css/style.css
@@ -122,21 +122,6 @@ body {
   justify-content: center;
 }
 
-#rowCard .container:hover .left {
-  width: 50%;
-  height: 100%;
-  z-index: 100;
-  margin-top: 0px;
-  margin-right: 0px;
-  transition: all 1s ease-in-out;
-}
-
-#rowCard .container:hover .right {
-  width: 50%;
-  height: max-content;
-  transition: all 1s ease-in-out;
-}
-
 #rowCard .left {
   background-color: white;
   border: 3px solid;
@@ -146,7 +131,6 @@ body {
   margin-top: -100px;
   margin-right: -120px;
   z-index: 200;
-  transition: all 1s ease-in-out;
 }
 
 #rowCard .right {
@@ -154,7 +138,6 @@ body {
   width: 18em;
   height: 100%;
   z-index: 100;
-  transition: all 1s ease-in-out;
 }
 
 #rowCard .inhBg {
@@ -196,14 +179,30 @@ body {
   white-space: nowrap;
 }
 
-/* [id^='btnCard'] {
-  width: 95%;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-} */
+[id^='btnCard'] {
+  font-size: 14px;
+  width: 100%;
+}
 
 #cardMsgErrorLogin {
   width: 100%;
   position: absolute;
+}
+
+#priceCar p {
+  margin: 0;
+  padding: 0;
+  white-space: normal;
+}
+
+#carCardTitleSpan {
+  font-size: 1.5em;
+}
+
+[id^='colToHide'] {
+  width: 40%;
+}
+
+[id^='colToStretch'] {
+  width: 60%;
 }
