font-size cardInfo responsive e modalInfo

--- a/scss/style.sass
+++ b/scss/style.sass
@@ -138,8 +138,6 @@ body
     height: 100%
     z-index: 100
 
-
-
   .inhBg
     background-color: inherit
 
@@ -194,3 +192,16 @@ body
 
 [id^='colToStretch']
   width: 60%
+
+[id^='carPadding']
+  width: 40%
+
+[id^='carInfo']
+  width: 60%
+  font-size: 15px
+
+  p
+    font-size: 1.5em
+    margin: 0
+    padding: 0
+
