--- a/css/style.css
+++ b/css/style.css
@@ -206,3 +206,18 @@ body {
 [id^='colToStretch'] {
   width: 60%;
 }
+
+[id^='carPadding'] {
+  width: 40%;
+}
+
+[id^='carInfo'] {
+  width: 60%;
+  font-size: 15px;
+}
+
+[id^='carInfo'] p {
+  font-size: 1.5em;
+  margin: 0;
+  padding: 0;
+}
