--- a/css/style.css
+++ b/css/style.css
@@ -212,3 +212,63 @@ body {
   margin: 0;
   padding: 0;
 }
+
+#profileBox .card-box {
+  padding: 20px;
+  border-radius: 3px;
+  margin-bottom: 30px;
+  background-color: #fff;
+}
+
+#profileBox .social-links li a {
+  border-radius: 50%;
+  color: rgba(121, 121, 121, 0.8);
+  display: inline-block;
+  height: 30px;
+  line-height: 27px;
+  border: 2px solid rgba(121, 121, 121, 0.5);
+  text-align: center;
+  width: 30px;
+}
+
+#profileBox .social-links li a:hover {
+  color: #797979;
+  border: 2px solid #797979;
+}
+
+#profileBox .thumb-lg {
+  height: 88px;
+  width: 88px;
+}
+
+#profileBox .img-thumbnail {
+  padding: .25rem;
+  background-color: #fff;
+  border: 1px solid #dee2e6;
+  border-radius: .25rem;
+  max-width: 100%;
+  height: auto;
+}
+
+#profileBox .text-pink {
+  color: #ff679b !important;
+}
+
+#profileBox .btn-rounded {
+  border-radius: 2em;
+}
+
+#profileBox .text-muted {
+  color: #98a6ad !important;
+}
+
+#profileBox h4 {
+  line-height: 22px;
+  font-size: 18px;
+}
+
+#divider {
+  opacity: 0.5;
+  border: 2px solid #198754;
+  border-radius: 5px;
+}
